<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="DialogOrderViewModel"
            type="com.duydv.vn.foodappmvvm.viewmodel.DialogOrderViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/define_dimen_6"
                android:layout_toStartOf="@+id/txt_price_order"
                android:text="@string/order_detail"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_xnormal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_price_order"
                android:text="@{DialogOrderViewModel.strSumPrice}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_list_food_order"
            android:text="@{DialogOrderViewModel.getStringListFoodsOrder()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/payment_method"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_gray"
            android:padding="@dimen/define_dimen_12"
            android:text="@string/cash"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/fullname"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:text="@={DialogOrderViewModel.strName}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_gray"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/define_dimen_12"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/phone"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:text="@={DialogOrderViewModel.strPhone}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_gray"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:padding="@dimen/define_dimen_12"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/address"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:text="@={DialogOrderViewModel.strAddress}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_gray"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="@dimen/define_dimen_12"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:layout_marginBottom="@dimen/define_dimen_10"
            android:orientation="horizontal">

            <TextView
                android:onClick="@{() -> DialogOrderViewModel.onCliclCancel()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/define_dimen_10"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_shape_corner_6"
                android:gravity="center"
                android:padding="@dimen/define_dimen_10"
                android:paddingStart="@dimen/define_dimen_16"
                android:paddingEnd="@dimen/define_dimen_16"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:onClick="@{() -> DialogOrderViewModel.onClickOrder()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_green_shape_corner_6"
                android:gravity="center"
                android:padding="@dimen/define_dimen_10"
                android:text="@string/order"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </LinearLayout>
</layout>