<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Feedback"
            type="com.duydv.vn.foodappmvvm.model.Feedback" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_name"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_orange"
            android:imeOptions="actionNext"
            android:text="@={Feedback.name}"
            android:inputType="text"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_phone"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_orange"
            android:imeOptions="actionNext"
            android:text="@={Feedback.phone}"
            android:inputType="phone"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_email"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_orange"
            android:imeOptions="actionNext"
            android:text="@={Feedback.email}"
            android:inputType="textEmailAddress"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_comment"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/define_dimen_80"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_orange"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:text="@={Feedback.comment}"
            android:inputType="textMultiLine"
            android:maxLength="1000"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/txtSendFeedback"
            android:onClick="@{() -> Feedback.onLickSendFeedback(txtSendFeedback)}"
            android:layout_width="@dimen/define_dimen_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_orange_shape_corner_6"
            android:gravity="center"
            android:padding="@dimen/define_dimen_12"
            android:text="@string/send_feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

</layout>