<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="DialogCartViewModel"
            type="com.duydv.vn.foodappmvvm.viewmodel.DialogCartViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/define_dimen_16">

        <RelativeLayout
            android:id="@+id/layout_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/layout_image"
                android:layout_width="@dimen/define_dimen_100"
                android:layout_height="@dimen/define_dimen_80"
                android:layout_centerVertical="true"
                app:cardCornerRadius="@dimen/define_dimen_6">

                <ImageView
                    app:load_image_food="@{DialogCartViewModel.mFood.image}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:layout_toEndOf="@+id/layout_image"
                android:orientation="vertical">

                <TextView
                    android:text="@{DialogCartViewModel.mFood.name}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <TextView
                    android:text="@{DialogCartViewModel.strPrice}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_small" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/define_dimen_5"
                    android:orientation="horizontal">

                    <TextView
                        android:onClick="@{() -> DialogCartViewModel.onClickMinusFood(txtCount)}"
                        android:layout_width="@dimen/define_dimen_30"
                        android:layout_height="@dimen/define_dimen_30"
                        android:background="@drawable/bg_white_shape_border_gray"
                        android:gravity="center"
                        android:text="@string/minus"
                        android:textColor="@color/green"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/txtCount"
                        android:layout_width="@dimen/define_dimen_30"
                        android:layout_height="@dimen/define_dimen_30"
                        android:layout_marginStart="@dimen/define_dimen_10"
                        android:layout_marginEnd="@dimen/define_dimen_10"
                        android:background="@drawable/bg_white_shape_border_orange"
                        android:gravity="center"
                        android:text="@string/one"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:onClick="@{() -> DialogCartViewModel.onClickPhusFood(txtCount)}"
                        android:layout_width="@dimen/define_dimen_30"
                        android:layout_height="@dimen/define_dimen_30"
                        android:background="@drawable/bg_white_shape_border_gray"
                        android:gravity="center"
                        android:text="@string/plus"
                        android:textColor="@color/green"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_infor"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:orientation="horizontal">

            <TextView
                android:onClick="@{() -> DialogCartViewModel.onClickCancle()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/define_dimen_10"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_shape_corner_6"
                android:gravity="center"
                android:padding="@dimen/define_dimen_10"
                android:paddingStart="@dimen/define_dimen_16"
                android:paddingEnd="@dimen/define_dimen_16"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:onClick="@{() -> DialogCartViewModel.onClickAddToCart()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_green_shape_corner_6"
                android:gravity="center"
                android:padding="@dimen/define_dimen_10"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </RelativeLayout>

</layout>