<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="CartViewModel"
            type="com.duydv.vn.foodappmvvm.viewmodel.CartViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tool_bar"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:text="@string/cart"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xnormal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_bottom"
            android:layout_below="@+id/tool_bar"
            android:layout_marginStart="@dimen/define_dimen_10"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="0dp"
            app:calculate_sum_price="@{txtSumPrice}"
            app:load_list_food_cart="@{CartViewModel.mListFoodCart}" />

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:layout_toStartOf="@+id/txt_order"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sum_price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtSumPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/define_dimen_10"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_size_xnormal"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_order"
                    android:onClick="@{() -> CartViewModel.onClickOrder()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_green_shape_corner_6"
                    android:padding="@dimen/define_dimen_12"
                    android:text="@string/order"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>